# Haskell-Project

haskell-project/: haskell.cabal
haskell-project/src/: Mylib.hs  cale.hs  graph.dot  hangman.hs
haskell-project/test/: Main.hs
